<resources>
    <string name="app_name">Bookli</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="date_prompt">Select date</string>
    <string-array name="room_names">
        <item name="dr21">Discussion Room 2.1</item>
        <item name="dr22">Discussion Room 2.2</item>
        <item name="dr23">Discussion Room 2.3</item>
        <item name="dr32">Discussion Room 3.2</item>
    </string-array>
    <string-array name="times">
        <item name="0800">0800</item>
        <item name="0900">0900</item>
        <item name="1000">1000</item>
        <item name="1100">1100</item>
        <item name="1200">1200</item>
        <item name="1300">1300</item>
        <item name="1400">1400</item>
        <item name="1500">1500</item>
        <item name="1600">1600</item>
        <item name="1700">1700</item>
        <item name="1800">1800</item>
        <item name="1900">1900</item>
        <item name="2000">2000</item>
        <item name="2100">2100</item>
    </string-array>
    <string-array name="capacities">
        <item name="cap_dr21">2</item>
        <item name="cap_dr22">5</item>
        <item name="cap_dr23">5</item>
        <item name="cap_dr32">8</item>
    </string-array>
    <string name="capacity">Capacity: %1$d</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_student_id">Student ID</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_student_id">Invalid student ID</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="login_failed">"Login failed"</string>
    //for profile page dummy

    <string name="user_name">John Doe</string>
    <string name="user_email">johndoe@example.com</string>
    <string name="user_phone">1234567890</string>
    <string name="user_school_id">1234</string>
    <string name="edit_button_text">EDIT</string>
    <string name="save_button_text">Save</string>
    <string name="email_label">Email:</string>
    <string name="name_label">Name:</string>
    <string name="school_id_label">School ID:</string>
    <string name="phone_label">Phone Number:</string>
    <string name="share">Share</string>
    <string name="reminder">You have an upcoming meeting in 15mins.</string>
    <string name="title_profile">Profile</string>
    <string name="title_schedule">Schedule</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="student_id">Student ID</string>
    <string name="log_in">Log in</string>
    <string name="delete">Delete</string>
    <string name="date_date1">Date: DATE1</string>
    <string name="time_time1">Time: TIME1</string>
    <string name="room_room1">Room: ROOM1</string>
    <string name="room_image">Room Image</string>
    <string name="discussion_room_2_1">Discussion Room 2.1</string>
    <string name="date">Date</string>
    <string name="select_start_and_end_time_for_your_booking_n_1_hour_block_of_end_time_included_in_booking">Select start and end time for your booking \n (1 hour block of end time included in booking)</string>
    <string name="book">Book</string>
    <string name="user_profile">User Profile</string>
    <string name="submit">SUBMIT</string>
    <string name="_1000_1100_discussion_room_2_2">1000-1100: Discussion Room 2.2</string>
    <string name="_0900">0900</string>
    <string name="scan">Scan</string>


</resources>