<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.profile.ProfileFragment">


        <TextView
            android:id="@+id/user_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="106dp"
            app:layout_constraintBaseline_toTopOf="@id/my_table_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TableLayout
            android:id="@+id/my_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/user_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TableRow>

                <TextView
                    android:text="@string/name_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/name_edit"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/user_name" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/email_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/email_edit"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/user_email" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/phone_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/phone_edit"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:hint="@string/user_phone" />
            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/school_id_label"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/school_id_edit"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/user_school_id" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/edit_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_table_layout" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_table_layout"
            />


</androidx.constraintlayout.widget.ConstraintLayout>
