<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">


    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/room_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/dr21_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/share_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_tertiary"
            android:text="@string/share"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            style="@style/Widget.Material3.Button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_dark_errorContainer"
            android:text="@string/delete"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            style="@style/Widget.Material3.Button" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/md_theme_light_secondaryContainer"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        app:contentPadding="@dimen/margin_between_views"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_below="@id/textView"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/margin_between_views"
                android:text="@string/date_date1"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_between_views"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/time_time1"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/margin_between_views"
                android:text="@string/room_room1"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>