<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/booking_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/discussion_room_2_1"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

    <LinearLayout
        android:id="@+id/date_selection_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/booking_title"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/decrease_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/baseline_arrow_left_24"/>

        <TextView
            android:id="@+id/date_selection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/date" />

        <Button
            android:id="@+id/increment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/baseline_arrow_right_24"/>

    </LinearLayout>
    <TextView
        android:id="@+id/time_select_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_start_and_end_time_for_your_booking_n_1_hour_block_of_end_time_included_in_booking"
        android:layout_below="@id/date_selection_container"
        android:layout_marginBottom="@dimen/margin_between_views"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"/>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/time_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_select_hint"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/book_button"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_recyclerview"
        android:layout_centerInParent="true"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:text="@string/book" />

</RelativeLayout>